cambios 3 de abril 2023 sin datatables

--- a/src/app/pages/coordinadores/coordinadores.component.html
+++ b/src/app/pages/coordinadores/coordinadores.component.html
@@ -48,9 +48,9 @@
                 <thead>
                     <tr>
                         <th>código</th>
-                        <th>nombre</th>
-                        <th>empresa</th>
-                        <th>tienda</th>
+                        <th>Nombre</th>
+                        <th>Empresa</th>
+                        <th>Tienda</th>
                         <th>Fecha Hora Inicio</th>
                     </tr>
                 </thead>
