--- a/src/app/pages/list-orders/list-orders.component.html
+++ b/src/app/pages/list-orders/list-orders.component.html
@@ -2,23 +2,23 @@
 <div class="container">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button (click)="getDelivery(); detenerDe()" class="nav-link btn-outline-primary" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="false" [ngClass]="{ 'btn-primary': isPrimaryD, 'btn-outline-primary': !isPrimaryD }">Delivery</button>
+          <button (click)="getDelivery()" class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Delivery</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button (click)="getPickup(); detenerPic()"  class="nav-link btn-outline-warning"  id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false" [ngClass]="{ 'btn-warning': isPrimaryPick, 'btn-outline-warning': !isPrimaryPick }">Pickup</button>
+          <button (click)="getPickup()"  class="nav-link"  id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Pickup</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button (click)="getEmergencia(); detenerEm()"  class="nav-link btn-outline-danger" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false" [ngClass]="{ 'btn-danger': isPrimaryE, 'btn-outline-danger': !isPrimaryE }">Pedidos Emergencia</button>
+          <button (click)="getEmergencia()"  class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Pedidos Emergencia</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button (click)="getprogramadas(); detenerPr()"  class="nav-link btn-outline-success" id="pills-progra-tab" data-bs-toggle="pill" data-bs-target="#pills-progra" type="button" role="tab" aria-controls="pills-progra" aria-selected="false" [ngClass]="{ 'btn-success': isPrimaryPr, 'btn-outline-success': !isPrimaryPr }">Programadas</button>
+            <button (click)="getprogramadas()"  class="nav-link" id="pills-progra-tab" data-bs-toggle="pill" data-bs-target="#pills-progra" type="button" role="tab" aria-controls="pills-progra" aria-selected="false">Programadas</button>
           </li>
       </ul>
       <div class="tab-content " id="pills-tabContent">
         <div  class="stab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-            <div *ngIf="this.showDelivery == true" class="row">
+            <div *ngIf="this.showDelivery" class="row">
                 <div class="col-md-3" *ngFor="let order of delOrdersStructure">
-                    <div class="card border border-primary border-2 rounded-start" alt="75x75" style="width: 15rem;">
+                    <div class="card" style="width: 15rem;">
                         <div class="card-header" 
                         [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
                         'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
@@ -59,7 +59,7 @@
         <div  class="tab-pane fade row" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
             <div *ngIf="this.showPickup" class="row">
                 <div class="col-md-3" *ngFor="let order of PickordersStructure">
-                    <div class="card border border-warning border-2 rounded-start" alt="75x75" style="width: 15rem;">
+                    <div class="card" style="width: 15rem;">
                         <div class="card-header" 
                         [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
                         'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
@@ -101,7 +101,7 @@
             
             <div *ngIf="this.showEmergencia" class="row">
                 <div class="col-md-3" *ngFor="let order of emerOrdersStructure">
-                    <div  class="card border border-danger border-2 rounded-start" alt="75x75" style="width: 15rem;">
+                    <div  class="card" style="width: 15rem;">
                         <div class="card-header" 
                         [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
                         'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
@@ -143,9 +143,9 @@
         </div>
         <div class="tab-pane fade" id="pills-progra" role="tabpanel" aria-labelledby="pills-progra-tab">
             
-            <div *ngIf="this.showProgramada == true" class="row">
+            <div *ngIf="this.showProgramada" class="row">
                 <div class="col-md-3" *ngFor="let order of proOrdersStructure">
-                    <div class="card border border-success border-2 rounded-start" alt="75x75" style="width: 15rem;">
+                    <div class="card" style="width: 15rem;">
                         <div class="card-header" 
                         [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
                         'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
@@ -186,5 +186,5 @@
             </div>
         </div>
       </div>
-
+</div>
 
