--- a/src/app/pages/navsm/navsm.component.html
+++ b/src/app/pages/navsm/navsm.component.html
@@ -27,9 +27,12 @@
           <li class="nav-item" *ngIf="userType ===1">
             <a class="nav-link" routerLink="/updatepassword">Actualizar contraseñas</a>
           </li>
-          <li class="nav-item" *ngIf="userType ===1">
+          <!--<li class="nav-item" *ngIf="userType ===1">
             <a class="nav-link" routerLink="/detalleestatus">Detalle pedidos</a>
           </li>
+          <li class="nav-item" *ngIf="userType ===2">
+            <a class="nav-link" routerLink="/ListaOrdenes">Detalle pedidos</a>
+          </li>-->
           <li class="nav-item align-end" *ngIf="userType >0">
             
           </li>
