--- a/src/app/pages/detalle-estados/detalle-estados.component.html
+++ b/src/app/pages/detalle-estados/detalle-estados.component.html
@@ -7,19 +7,21 @@
     <div class="col-md-12 fs-6">
         <span class="material-icons">store</span>
         
-        <select class=""  name="" id="tienda" [(ngModel)]="idTienda" (ngModelChange)="getallorderdetalle()">
-            <option>Seleccione tienda</option>
+        <select class=""  name="" id="tienda" [(ngModel)]="idTienda" (ngModelChange)="getAvailableBiker()">
+            <option disabled>Seleccione tienda</option>
             <option *ngFor="let tdsm  of allstore" [value]="tdsm.id">{{tdsm.name}} </option>
         </select>
     </div>
     <!--<div class="row">-->
-        <div class="col-12" *ngIf="OrderAvailable.length > 0">
-                <br>
-                <table datatable  class="table table-striped .table-hover tablasm">
+        <div class="col-12" *ngIf="BikerAvailable.length > 0">
+                <div class="col-12">
+                    <input class="form-control" type="text" ng-model="search" placeholder="Buscar"/>
+                </div>
+                <table class="table table-striped .table-hover tablasm">
                     <thead>
                         <tr class="bg-info">
                             <th>Orden</th>
-                            <th>Cliente</th>
+                            <th>Biker</th>
                             <th>Monto</th>
                             <th>Hora inicio</th>
                             <th>Estado</th>
@@ -27,28 +29,21 @@
                             <th>Detalle orden</th>
                         </tr>
                     </thead>
-                    <tbody *ngIf="OrderAvailable.length > 0">
-                        <tr *ngFor="let dataPedido of OrderAvailable">
-                            <td>{{dataPedido.norder}}</td>
-                            <td>{{dataPedido.name}}</td>
-                            <td>{{dataPedido.monto}}</td>
-                            <td>{{dataPedido.hini}}</td>
+                    <tbody >
+                        <tr *ngFor="let dataPedido of BikerAvailable">
+                            <td>{{dataPedido.order_id}}</td>
+                            <td>{{dataPedido.user_id}}</td>
+                            <td>{{dataPedido.id}}</td>
+                            <td>{{dataPedido.initial_date}}</td>
                             <td>{{dataPedido.status}}</td>
-                            <td>{{dataPedido.hend}}</td>
-                            <td><a [routerLink]="['/single-order/', dataPedido.id]" class="btn bg-info text-dark" (click)="router.navigate(['/PedidoDelivery']);"
+                            <td>{{dataPedido.end_date}}</td>
+                            <td><a [routerLink]="['/single-order/', dataPedido.order_id]" class="btn bg-info text-dark" (click)="router.navigate(['/PedidoDelivery']);"
                                 >ver orden</a></td>
                         </tr>
                     </tbody>
                 </table>
-            </div>
+
+        </div>
 
     <!--</div>-->
 </div>
-<table id="hola">
-    <thead>
-        <tr>
-            <th>1</th>
-            <th>2</th>
-        </tr>
-    </thead>
-</table>
