--- a/src/app/pages/orderlist/orderlist.component.html
+++ b/src/app/pages/orderlist/orderlist.component.html
@@ -170,7 +170,7 @@
                             </div>
                         <div class="card-body">
                             <h6 class="card-subtitle">{{order.nombre}}</h6>
-                            <p class="card-text">Fecha {{order.fecha}}</p>
+                            <p class="card-text">Fecha Entrega {{order.dateView}}</p>
                             <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
                             <p class="card-text">Total Q {{order.total}}</p>
                             <p class="card-text">Pedido {{order.numeroPedido}}</p>
