--- a/src/app/pages/single-order/single-order.component.html
+++ b/src/app/pages/single-order/single-order.component.html
@@ -1,7 +1,7 @@
 <NavSm></NavSm>
 <div class="container">
     <div  class="row">
-        <button class="material-icons">delete</button>
+        <button class="material-icons" (click)="DeleteOrder()">delete</button>
         <div class="col-md-4 overflow-auto">
             <h4>Datos del cliente</h4>
             <div class="progress" [ngStyle]="{background: '#00356f'}">
