--- a/src/app/pages/list-orders/list-orders.component.html
+++ b/src/app/pages/list-orders/list-orders.component.html
@@ -1,190 +1,36 @@
 <NavSm></NavSm>
 <div class="container">
-    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item" role="presentation">
-          <button (click)="getDelivery()" class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Delivery</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button (click)="getPickup()"  class="nav-link"  id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Pickup</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button (click)="getEmergencia()"  class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Pedidos Emergencia</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button (click)="getprogramadas()"  class="nav-link" id="pills-progra-tab" data-bs-toggle="pill" data-bs-target="#pills-progra" type="button" role="tab" aria-controls="pills-progra" aria-selected="false">Programadas</button>
-          </li>
-      </ul>
-      <div class="tab-content " id="pills-tabContent">
-        <div  class="stab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-            <div *ngIf="this.showDelivery" class="row">
-                <div class="col-md-3" *ngFor="let order of delOrdersStructure">
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header" 
-                        [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
-                        'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
-                        'bg-info':order.estado === 'entregado'?'bg-success':order.estado === 'emergencia'?'bg-danger':order.estado === 'programado'?'bg-dark':''">
-                            <div class="start-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                                {{order.estado}}
-                            </div>
-                            <div class="end-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                            <app-count-down 
-                                [deliveryDate] = "order.deliveryDate"
-                                [orderType] = 1
-                            ></app-count-down>
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">{{order.nombre}}</h6>
-                            <p class="card-text">Fecha {{order.fecha}}</p>
-                            <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
-                            <p class="card-text">Total Q {{order.total}}</p>
-                            <p class="card-text">Pedido {{order.numeroPedido}}</p>
-                            <a [routerLink]="['/single-order/', order.idOrder]" class="card-link btn bg-light text-dark"
-                            [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
-                        'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
-                        'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
-                            >ver orden</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div  class="tab-pane fade row" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-            <div *ngIf="this.showPickup" class="row">
-                <div class="col-md-3" *ngFor="let order of PickordersStructure">
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header" 
-                        [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
-                        'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
-                        'bg-info':order.estado === 'entregado'?'bg-success':order.estado === 'emergencia'?'bg-danger':order.estado === 'programado'?'bg-dark':''">
-                            <div class="start-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                                {{order.estado}}
-                            </div>
-                            <div class="end-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                                <app-count-down 
-                                    [deliveryDate] = "order.deliveryDate"
-                                    [orderType] = "2"
-                                ></app-count-down>
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">{{order.nombre}}</h6>
-                            <p class="card-text">Fecha {{order.fecha}}</p>
-                            <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
-                            <p class="card-text">Total Q {{order.total}}</p>
-                            <p class="card-text">Pedido {{order.numeroPedido}}</p>
-                            <a [routerLink]="['/single-order/', order.idOrder]" class="card-link btn bg-light text-dark"
-                            [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
-                        'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
-                        'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
-                            >ver orden</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-            
-            <div *ngIf="this.showEmergencia" class="row">
-                <div class="col-md-3" *ngFor="let order of emerOrdersStructure">
-                    <div  class="card" style="width: 15rem;">
-                        <div class="card-header" 
-                        [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
-                        'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
-                        'bg-info':order.estado === 'entregado'?'bg-success':order.estado === 'emergencia'?'bg-danger':order.estado === 'programado'?'bg-dark':''">
-                            <div class="start-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                                {{order.estado}} <br>
-                                {{order.nameEstado}} 
-                            </div>
-                            <div class="end-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                            <app-count-down 
-                                [deliveryDate] = "order.deliveryDate"
-                                [orderType] = 4
-                            ></app-count-down>
-                            
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">{{order.nombre}}</h6>
-                            <p class="card-text">Fecha {{order.fecha}}</p>
-                            <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
-                            <p class="card-text">Total Q {{order.total}}</p>
-                            <p class="card-text">Pedido {{order.numeroPedido}}</p>
-                            <a [routerLink]="['/single-order/', order.idOrder]" class="card-link btn bg-light text-dark" (click)="router.navigate(['/PedidoDelivery']);"
-                            [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
-                        'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
-                        'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
-                            >ver orden</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="tab-pane fade" id="pills-progra" role="tabpanel" aria-labelledby="pills-progra-tab">
-            
-            <div *ngIf="this.showProgramada" class="row">
-                <div class="col-md-3" *ngFor="let order of proOrdersStructure">
-                    <div class="card" style="width: 15rem;">
-                        <div class="card-header" 
-                        [ngClass]="order.estado === 'procesada'? 'bg-light':order.estado === 'asignada'?
-                        'bg-secondary':order.estado === 'en ruta'?'bg-warning':order.estado === 'en el sitio'?
-                        'bg-info':order.estado === 'entregado'?'bg-success':order.estado === 'emergencia'?'bg-danger':order.estado === 'programado'?'bg-dark':''">
-                            <div class="start-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                                {{order.estado}}
-                            </div>
-                            <div class="end-0 text-black fw-bold"
-                            [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
-                        'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
-                        'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                            <app-count-down 
-                                [deliveryDate] = "order.deliveryDate"
-                                [orderType] = 3
-                            ></app-count-down>
-                                
-                            </div>
-                            
-                            </div>
-                        <div class="card-body">
-                            <h6 class="card-subtitle">{{order.nombre}}</h6>
-                            <p class="card-text">Fecha {{order.fecha}}</p>
-                            <p class="card-text">Tipo de pago {{order.tipoPago}}</p>
-                            <p class="card-text">Total Q {{order.total}}</p>
-                            <p class="card-text">Pedido {{order.numeroPedido}}</p>
-                            <a [routerLink]="['/single-order/', order.idOrder]" class="card-link btn bg-light text-dark" (click)="router.navigate(['/PedidoDelivery']);"
-                            [ngClass]="order.estado === 'procesada'? 'bg-light text-black':order.estado === 'asignada'?
-                        'bg-Secondary text-black':order.estado === 'en ruta'?'bg-warning text-black':order.estado === 'en el sitio'?
-                        'bg-info text-black':order.estado === 'entregado'?'bg-success text-black':order.estado === 'emergencia'?'bg-danger text-white':order.estado === 'programado'?'bg-dark text-white':''"
-                            >ver orden</a>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
-      </div>
+<div>
+    <h4 class="bg-info text-center">Reporte Ordenes</h4>
 </div>
-
+<div class="row" style="background-color:#AED6F1;">
+    <div class="col-4">
+        <mat-form-field appearance="fill">
+            <mat-label>Enter a date range</mat-label>
+            <mat-date-range-input [rangePicker]="picker">
+              <input matStartDate  placeholder="Start date" [(ngModel)]="dateStart">
+              <input matEndDate placeholder="End date" [(ngModel)]="dateEnd">
+            </mat-date-range-input>
+            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker></mat-date-range-picker>
+          </mat-form-field>
+    </div>
+    <div class="col-4">
+        <h5>mat select</h5>
+        <mat-form-field appearance="fill">
+            <mat-label>Select an option</mat-label>
+            <mat-select [(value)]="selected">
+              <mat-option>None</mat-option>
+              <mat-option value="5">Ordenes entregadas</mat-option>
+              <mat-option value="2">Ordenes en ruta</mat-option>
+              <mat-option value="3">Ordenes en sitio</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
+    <div class="col-4 text-end ">
+        <br>
+        <button class="btn btn-info btn-lg align-bottom" (click)="viewData()">Ver Informe</button>
+    </div>
+</div>
+</div>
