--- a/src/app/pages/coordinadores/coordinadores.component.html
+++ b/src/app/pages/coordinadores/coordinadores.component.html
@@ -33,7 +33,7 @@
                         <td>{{userasstd.empresa}}</td>
                         <td>                             
                             <select class=""  name="" id="tienda" [(ngModel)]="idTienda">
-                                <option>Seleccione Motorista</option>
+                                <option>Seleccione Tienda</option>
                                 <option *ngFor="let tdsm  of allstore" [value]="tdsm.id">{{tdsm.name}} </option>
                             </select>
                         </td>
