--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -58,6 +58,7 @@
                     <option value="1">Administrador</option>
                     <option value="2">Coordinador</option>
                     <option value="3">Biker</option>
+                    <option value="4">Coordinador call center</option>
                   </select>
               </div>
             </div>
