--- a/src/app/pages/single-order/single-order.component.html
+++ b/src/app/pages/single-order/single-order.component.html
@@ -59,11 +59,13 @@
                 {{ordersStructureSingle.direcfact}}
             </div>
             <h6 class="col-md-12">Indicaciones del Pedido</h6>
+            <hr class="col-md-12 border-2" [ngStyle]="{background: '#00356f'}">
             <div class="col-md-12 fs-5">
                 {{ordersStructureSingle.indicaciones}}
             </div>
-            <hr class="col-md-12 border-2" [ngStyle]="{background: '#00356f'}">
+            
             <h6 class="col-md-12">Datos de pago</h6>
+            <hr class="col-md-12 border-2" [ngStyle]="{background: '#00356f'}">
             <h6 class="col-md-12">Tipo de pago:</h6>
             <div class="col-md-12 fs-5">
                 {{ordersStructureSingle.tipoPago}}
@@ -86,100 +88,90 @@
             <div class="progress" [ngStyle]="{background: '#00356f'}">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <table class="table table-borderless">
-                <thead>
-                <tr>
-                    <th scope="col">Item</th>
-                    <th scope="col">Cantidad</th>
-                    <th scope="col">Precio</th>
-                    <th scope="col">Total</th>
-                </tr>
-                </thead>
-                <tbody *ngIf="ordersStructureSingle.detalle && ordersStructureSingle.detalle.length > 0" class="text-center">
-                    <tr *ngFor="let masterSingle of ordersStructureSingle.detalle">
-                            <td scope="row">
-                                <div class="fs-6 bg-primary">
-                                    {{masterSingle.master}}
-                                </div>
-                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
-                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
-                                        <div class="text-dark">
-                                            - {{itemsSingle.producto}}
-                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
-                                                <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
-                                                    <div>
-                                                        &nbsp; &nbsp; &nbsp;-- {{complemento.itemcomp}}
-                                                    </div>
-                                                </div>
+            <br>
+            <div class="row text-center bg-info">
+                <div class="col-6 fs-5">Item</div>
+                <div class="col-2 fs-5">Cantidad</div>
+                <div class="col-2 fs-5">Precio</div>
+                <div class="col-2 fs-5">Total</div>
+            </div>
+            <div *ngIf="ordersStructureSingle.detalle && ordersStructureSingle.detalle.length > 0" class="text-center">
+                <div class="row" *ngFor="let masterSingle of ordersStructureSingle.detalle">
+                    <div class="col-6">
+                        {{masterSingle.master}}
+                        <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                            <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                <div class="text-dark">
+                                    - {{itemsSingle.producto}}
+                                    <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                        <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
+                                            <div>
+                                                &nbsp; &nbsp; &nbsp;-- {{complemento.itemcomp}}
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                
-                            </td>
-                            <td>
-                                <div class="fs-6 bg-primary text-center">
-                                    {{masterSingle.cantidad}}
-                                </div>
-                                
-                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
-                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
-                                        <div class="text-dark">
-                                            {{itemsSingle.unidad}}
-                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
-                                                <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
-                                                    <div>
-                                                        {{complemento.cantidad}}
-                                                    </div>
-                                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        {{masterSingle.cantidad}}
+                        <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                            <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                <div class="text-dark">
+                                    {{itemsSingle.unidad}}
+                                    <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                        <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
+                                            <div>
+                                                {{complemento.cantidad}}
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                </td>
-                            <td>
-                                <div class="fs-6 bg-primary text-center">
-                                    {{masterSingle.total}}
-                                </div>
-                                
-                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
-                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
-                                        <div class="text-dark">
-                                            {{itemsSingle.precio}}
-                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
-                                                <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
-                                                    <div>
-                                                       {{complemento.precio}}
-                                                    </div>
-                                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        {{masterSingle.total}}
+                        <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                            <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                <div class="text-dark">
+                                    {{itemsSingle.precio}}
+                                    <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                        <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
+                                            <div>
+                                               {{complemento.precio}}
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </td>
-                            <td>
-                                <div class="fs-6 bg-primary text-center">
-                                    Q {{masterSingle.totalprd}}
-                                </div>
-                                
-                                <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
-                                    <div *ngFor="let itemsSingle of masterSingle.items" class="">
-                                        <div class="text-dark">
-                                            {{itemsSingle.precio}}
-                                            <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
-                                                <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
-                                                    <div>
-                                                        {{complemento.precio}}
-                                                    </div>
-                                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        {{masterSingle.total}}
+                        <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
+                            <div *ngFor="let itemsSingle of masterSingle.items" class="">
+                                <div class="text-dark">
+                                    {{itemsSingle.precio}}
+                                    <div *ngIf="itemsSingle.complemento && itemsSingle.complemento.length > 0">
+                                        <div *ngFor="let complemento of itemsSingle.complemento" class="text-secondary">
+                                            <div>
+                                                {{complemento.precio}}
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </td>
-                      </tr>
-                </tbody>
-            </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 text-start">Observaciones: {{masterSingle.comment}}</div>
+                    <div class="progress bg-success">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+
+            </div>
      </div>
      <div class="col-6">
        
