--- a/src/app/pages/detail-order/detail-order.component.html
+++ b/src/app/pages/detail-order/detail-order.component.html
@@ -1,14 +1,14 @@
 <NavSm></NavSm>
 <div class="container">
     <div  class="row">
-        <button class="material-icons" (click)="DeleteOrder()">delete</button>
+        <button class="material-icons" (click)="DeleteOrder()" ng-disabled="all">delete</button>
         <div class="col-md-4 overflow-auto">
             <h4>Datos del cliente</h4>
             <div class="progress" [ngStyle]="{background: '#00356f'}">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
-            <h6 class="col-md-12">Asignar motorista:</h6>
+            <!--<h6 class="col-md-12">Asignar motorista:</h6>
             <div class="col-md-12 fs-6">
                 <span class="material-icons">motorcycle</span>
                 
@@ -19,10 +19,10 @@
             </div>
             <div class="col-md-12 fs-5">
                 <button id="idAloha" class="btn btn-success"  (click)="sendToAloha()" *ngIf="ordersStructureSingle.sendAloha != 1">Enviar Aloha</button>
-            </div>
+            </div>-->
             <h6 class="col-md-12">Motorista asignado:</h6>
             <div class="col-md-12 fs-5">
-                {{ordersStructureSingle.userbiker}}
+              
             </div>
             <h6 class="col-md-12">Orden:</h6>
             <div class="col-md-12 fs-5">
@@ -82,33 +82,10 @@
             <div class="col-md-12 fs-5">
                 Q {{ordersStructureSingle.total}}
             </div>
-            <h6 class="col-md-12">Cambio</h6>
-            <div class="col-md-12 fs-5">
-                Q {{ordersStructureSingle.cambio}}
-            </div>
             <h6 class="col-md-12">Fecha</h6>
             <div class="col-md-12 fs-5">
                 {{ordersStructureSingle.fecha}}
             </div>
-            <h6 class="col-md-12">Datos Descuentos</h6>
-            <div class="col-md-12">
-                <strong>Descuentos Call Center</strong>
-                <br>
-                {{ordersStructureSingle.cpn_call_description}}
-                <br>
-                {{ordersStructureSingle.cpn_call_amount}}
-                <br>
-                <strong>canje cupon</strong>
-                <br>
-                {{ordersStructureSingle.cpn_cupon}}
-                <br>
-                {{ordersStructureSingle.cpn_amount}}
-                <br>
-                {{ordersStructureSingle.cpn_description}}
-                <br>
-                {{ordersStructureSingle.cpn_sms}}
-            </div>
-           
         </div>
         <div class="col-md-8 overflow-hidden">
             <h4>Orden</h4>
@@ -206,5 +183,4 @@
     </div>
     
 </div>
-
-<!--<div id="map" class="map"></div>-->
+<div id="map" class="map"></div>
