--- a/src/app/pages/list-orders/list-orders.component.html
+++ b/src/app/pages/list-orders/list-orders.component.html
@@ -64,7 +64,7 @@
           <td>{{comp.name}}</td>
           <td>{{comp.monto}}</td>
           <td>{{comp.tipo_pago}}</td>
-          <td><a [routerLink]="['/detail-single/', comp.order_id]" class="btn bg-info text-dark" (click)="router.navigate(['/PedidoDelivery']);"
+          <td><a [routerLink]="['/detail-single/', comp.order_id]" class="btn bg-info text-dark"
               >ver orden</a></td>
       </tr>
   </tbody>
