--- a/src/app/pages/single-order/single-order.component.html
+++ b/src/app/pages/single-order/single-order.component.html
@@ -1,7 +1,7 @@
 <NavSm></NavSm>
 <div class="container">
     <div  class="row">
-        <button class="material-icons" (click)="DeleteOrder()">delete</button>
+        <button class="material-icons bg-danger"  data-bs-toggle="modal" data-bs-target="#eliminarOrder">delete</button>
         <div class="col-md-4 overflow-auto">
             <h4>Datos del cliente</h4>
             <div class="progress" [ngStyle]="{background: '#00356f'}">
@@ -206,5 +206,22 @@
     </div>
     
 </div>
-
+<!-- Modal -->
+<div class="modal fade" id="eliminarOrder" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Eliminar orden</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+         Desea eliminar la orden <strong class="text-danger">! ESTA ACCIÓN NO TIENE REVERSA</strong> 
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="DeleteOrder()">Confirmar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <!--<div id="map" class="map"></div>-->
