--- a/src/app/pages/navsm/navsm.component.html
+++ b/src/app/pages/navsm/navsm.component.html
@@ -33,6 +33,9 @@
           <li class="nav-item" *ngIf="userType ===1">
             <a class="nav-link" routerLink="/ListaOrdenes">Historial</a>
           </li>
+          <li class="nav-item" *ngIf="userType ===1">
+            <a class="nav-link" routerLink="/dtcall">Ordenes actuales</a>
+          </li>
           <!--<li class="nav-item" *ngIf="userType ===1">
             <a class="nav-link" routerLink="/detalleestatus">Detalle pedidos</a>
           </li>
